--- a/src/components/MeilleuresVentes.scss
+++ b/src/components/MeilleuresVentes.scss
@@ -5,12 +5,6 @@
 	margin: 50px 0;
 }
 
-.container {
-	@media only screen and (min-width: 993px) {
-		width: 90%;
-	}
-}
-
 .row .col {
 	padding: 0;
 }
@@ -22,5 +16,17 @@
 
 	& > * {
 		width: 20%;
+	}
+}
+
+.container {
+	@media only screen and (min-width: 993px) {
+		width: 90%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.titre-meilleures-ventes {
+		font-size: 12px;
 	}
 }
