--- a/src/components/banniere/BanniereBleu.scss
+++ b/src/components/banniere/BanniereBleu.scss
@@ -1,12 +1,21 @@
 .banniere_livraison {
-    background-color: var(--color-primary);
-    width: 100%;
-    color: white;
-    height: 100px;
-    margin: 0;
+	background-color: var(--color-primary);
+	width: 100%;
+	color: white;
+	height: 100px;
+	margin: 0;
 
-    h2 {
+	h2 {
+		font-size: 24px;
+	}
+}
 
-        font-size: 24px;
-    }
+@media screen and (max-width: 768px) {
+	.banniere_livraison {
+		height: 85px;
+
+		h2 {
+			font-size: 20px;
+		}
+	}
 }
