--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@ body {
 	box-sizing: border-box;
 	font-family: "Open Sans", sans-serif;
 	font-size: 14px;
+
+	width: 100vw;
 }
 
 ::-webkit-scrollbar {
