--- a/src/components/DernierProduitEnLigne.scss
+++ b/src/components/DernierProduitEnLigne.scss
@@ -40,3 +40,11 @@
 		padding-top: -10px;
 	}
 }
+
+@media screen and (max-width: 768px) {
+	.flex_right {
+		.card-action--prix {
+			font-size: 19px;
+		}
+	}
+}
