--- a/src/components/MeilleuresVentes.scss
+++ b/src/components/MeilleuresVentes.scss
@@ -19,8 +19,8 @@
 	}
 }
 
-.container {
-	@media only screen and (min-width: 993px) {
+@media only screen and (min-width: 993px) {
+	.container {
 		width: 90%;
 	}
 }
@@ -28,5 +28,15 @@
 @media screen and (max-width: 768px) {
 	.titre-meilleures-ventes {
 		font-size: 12px;
+	}
+
+	.meilleurs-ventes-produits {
+		& > * {
+			width: 33%;
+		}
+	}
+
+	.container {
+		width: 95%;
 	}
 }
