--- a/src/components/banniere/BanniereBlackAvantFooter.scss
+++ b/src/components/banniere/BanniereBlackAvantFooter.scss
@@ -11,9 +11,8 @@
 //     img {
 //         height: 43px;
 //     }
-//  
+//
 // }
-
 
 // .banniereGarantiesLivraisons--texte_droite {
 //     max-width: 130px;
@@ -29,21 +28,19 @@
 //     font-size: 12px;
 // }
 
-
 .banniereGarantiesLivraisons--elmt {
-    max-width: 175px;
+	max-width: 175px;
 }
 
-/* Bannière black */@at-root
+/* Bannière black */
+@at-root .banniereBlackAvantFooter {
+	background-color: black;
+	color: white;
+	padding: 10px 0;
+	margin: 0;
+	border-bottom: rgb(90, 90, 90) solid 1px;
 
-.banniereBlackAvantFooter {
-    background-color: black;
-    color: white;
-    padding: 10px 0;
-    margin: 0;
-    border-bottom: rgb(90, 90, 90) solid 1px;
-
-    .material-icons {
-        font-size: 40px;
-    }
+	.material-icons {
+		font-size: 40px;
+	}
 }
