--- a/src/components/blog/ExtraitArticleBlog.scss
+++ b/src/components/blog/ExtraitArticleBlog.scss
@@ -31,3 +31,10 @@
 		align-items: center;
 	}
 }
+
+@media screen and (max-width: 768px) {
+	.extrait-blog {
+		margin-bottom: 40px;
+		width: 33%;
+	}
+}
