Add responsive mobile to banniere top + text intro

--- a/src/components/FicheProduitAccueil.scss
+++ b/src/components/FicheProduitAccueil.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	// padding-bottom: 30px;
 	padding: 0 7px 30px 7px;
-	overflow: hidden;
+	// overflow: hidden;
 	box-shadow: none;
 	border-right: 2px solid rgb(235, 235, 235);
 
