--- a/src/components/banniere/BanniereBleu.scss
+++ b/src/components/banniere/BanniereBleu.scss
@@ -20,3 +20,18 @@
 		}
 	}
 }
+
+@media screen and (max-width: 480px) {
+	.banniere_livraison {
+		margin: 30px 0;
+		padding-left: 20px;
+
+		div {
+			text-align: left;
+			h2 {
+				font-size: 18px;
+				line-height: 20px;
+			}
+		}
+	}
+}
