--- a/src/components/banniere/BanniereIconsGarantiesLivraisons.scss
+++ b/src/components/banniere/BanniereIconsGarantiesLivraisons.scss
@@ -34,3 +34,36 @@
 		}
 	}
 }
+
+@media screen and (max-width: 480px) {
+	.banniereGarantiesLivraisons {
+		display: flex;
+		flex-direction: column;
+
+		> div {
+			width: 100%;
+			position: relative;
+			padding: 20px 0;
+
+			&::after {
+				content: "";
+				background-color: lightgrey;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 1px;
+			}
+		}
+
+		img {
+			height: 40px;
+			width: 100px;
+		}
+
+		.banniereGarantiesLivraisons--texte_droite {
+			width: 100%;
+			max-width: 100%;
+		}
+	}
+}
