Add responsive mobile to Blog + Footer + Menu Sticky

--- a/src/components/blog/ArticlesBlog.scss
+++ b/src/components/blog/ArticlesBlog.scss
@@ -19,3 +19,13 @@
 		margin-bottom: 40px;
 	}
 }
+
+@media screen and (max-width: 480px) {
+	.extraits-article-blog {
+		flex-wrap: nowrap;
+		overflow: scroll;
+		// width: 100vw;
+		// justify-content: left;
+		// margin-bottom: 40px;
+	}
+}
